--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - /path/to/serve:/app/static/root
+      - /path/to/serve:/app/app/static/root
     restart: unless-stopped
