autodetect theme from OS

--- a/config.json
+++ b/config.json
@@ -2,6 +2,5 @@
   "port": 8080,
   "host": "0.0.0.0",
   "title": "Serfile",
-  "root_directory": "root",
-  "theme": "default"
+  "root_directory": "root"
 }
