ignore minified css and js

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ pip-selfcheck.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,venv
+
+# Ignore minified CSS files
+*.min.css
+
+# Ignore minified JavaScript files
+*.min.js
+
+# Ignore Root Folder
+app/static/root/
