--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "port": 8080,
   "host": "0.0.0.0",
   "title": "Serfile",
-  "root_directory": "root"
+  "root_directory": "root",
+  "environment": "dev"
 }
