--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "port": 8080,
+  "port": "8080",
   "host": "0.0.0.0",
   "title": "Serfile",
-  "root_directory": "home",
+  "rootName": "home",
   "environment": "dev"
 }
